WELD-2487 Update jboss-classfilewriter to 1.2.2.Final. Plus small JDK 9 profile adjustments.