@@ -26,6 +26,8 @@
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <!--TODO - update in Weld Parent-->
+        <compiler.version>3.7.0</compiler.version>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
         <!-- Travis CI build workaround -->
         <travis.surefire.argLine>-Xmx1024m</travis.surefire.argLine>
@@ -53,7 +55,8 @@
         <bundle.plugin.version>2.5.3</bundle.plugin.version>
         <cdi.tck-1-2.version>1.2.10.Final</cdi.tck-1-2.version>
         <cdi.tck-2-0.version>2.0.4.Final</cdi.tck-2-0.version>
-        <classfilewriter.version>1.1.2.Final</classfilewriter.version>
+        <!--1.2.2.Final is absolute minimum to eliminate IllegalAccess warning in JDK9+-->
+        <classfilewriter.version>1.2.2.Final</classfilewriter.version>
         <contiperf.version>1.06</contiperf.version>
         <spotbugs-maven-plugin.version>3.1.1</spotbugs-maven-plugin.version>
         <spotbugs-annotations-version>3.1.1</spotbugs-annotations-version>
@@ -778,35 +781,12 @@
             </build>
         </profile>
         <profile>
-            <!-- auto-activated profile for any JDK 9 (assuming Jigsaw version) -->
-            <id>jdk9</id>
+            <!-- Auto-activated profile for any JDK 9 or newer -->
+            <!-- Should contain all JDK 9+ related versions and/or test setup such as illegal-access=deny -->
+            <id>jdk9+</id>
             <activation>
-                <jdk>9</jdk>
+                <jdk>(9,)</jdk>
             </activation>
-            <properties>
-                <!--This property will be added to surefire jvm args when needed. Due to reflection usage we have to to open
-                package java.lang in module java.base to unnamed module, hence making it available for reflection-->
-                <surefire.plugin.jdk9.args>--add-opens java.base/java.lang=ALL-UNNAMED </surefire.plugin.jdk9.args>
-            </properties>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <!-- Assembly plugin needs JDK 9 compatible plexus-archiver version -->
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-assembly-plugin</artifactId>
-                            <version>3.0.0</version>
-                        </plugin>
-
-                        <!-- To have truly JDK 9 compatible compiler, we want 3.6.0+ -->
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>3.6.0</version>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
         </profile>
     </profiles>
 
